# pynads

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  schema.sql
db/: connection.py  nodes.py  schema.py
models/: node.py
tests/: conftest.py  test_cli.py  test_db_nodes.py  test_models.py  test_validators.py
ui/: cli.py
utils/: validators.py
