[project]
name = "pynads"
version = "0.1.0"
description = "Python Network Asset Documentation System"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[project.scripts]
pynads = "ui.cli:app"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.setuptools.packages.find]
where = ["."]
